--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(quantum-superoptimization)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(test main.cpp)
+file(GLOB_RECURSE TESTS_SOURCE "test/*.cpp")
+file(GLOB_RECURSE SOURCE "dagcircuit/*" "date/*" "math/*")
+add_executable(test_all ${TESTS_SOURCE} ${SOURCE})
