--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ project(quantum-superoptimization)
 set(CMAKE_CXX_STANDARD 17)
 
 file(GLOB_RECURSE TESTS_SOURCE "test/*.cpp")
-file(GLOB_RECURSE SOURCE "context/*" "dag/*" "gate/*" "generator/*" "math/*" "utils/*")
+file(GLOB_RECURSE SOURCE "context/*" "dag/*" "gate/*" "generator/*" "math/*" "utils/*" "verifier/*")
 add_executable(test_all ${TESTS_SOURCE} ${SOURCE})
