--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_BUILD_TYPE "Debug")
 
 file(GLOB_RECURSE TEST_ALL "test/test_all.cpp")
 file(GLOB_RECURSE TEST_GENERATOR "test/test_generator.cpp")
-file(GLOB_RECURSE SOURCE "context/*" "dag/*" "gate/*" "generator/*" "math/*" "utils/*" "verifier/*")
+file(GLOB_RECURSE SOURCE "context/*" "dag/*" "dataset/*" "gate/*" "generator/*" "math/*" "utils/*" "verifier/*")
 add_executable(test_all ${TEST_ALL} ${SOURCE})
 add_executable(test_generator ${TEST_GENERATOR} ${SOURCE})
