add test_optimization in cmakelist.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ set(CMAKE_BUILD_TYPE "Debug")
 file(GLOB_RECURSE TEST_ALL "test/test_all.cpp")
 file(GLOB_RECURSE TEST_GENERATOR "test/test_generator.cpp")
 file(GLOB_RECURSE TEST_EQUIV_SET "test/test_equivalence_set.cpp")
+file(GLOB_RECURSE TEST_OPTIMIZATION "test/test_optimization.cpp")
 file(GLOB_RECURSE SOURCE "context/*" "dag/*" "dataset/*" "gate/*" "generator/*" "math/*" "utils/*" "verifier/*" "tasograph/*")
 add_executable(test_all ${TEST_ALL} ${SOURCE})
 add_executable(test_generator ${TEST_GENERATOR} ${SOURCE})
 add_executable(test_equiv_set ${TEST_EQUIV_SET} ${SOURCE})
+add_executable(test_optimization ${TEST_OPTIMIZATION} ${SOURCE})
