--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,11 @@ file(GLOB_RECURSE TEST_BFS "test/test_bfs.cpp")
 file(GLOB_RECURSE TEST_GENERATOR "test/test_generator.cpp")
 file(GLOB_RECURSE TEST_EQUIV_SET "test/test_equivalence_set.cpp")
 file(GLOB_RECURSE TEST_OPTIMIZATION "test/test_optimization.cpp")
+file(GLOB_RECURSE TEST_OPTIMIZATION_SA "test/test_optimization_sa.cpp")
 file(GLOB_RECURSE SOURCE "context/*" "dag/*" "dataset/*" "gate/*" "generator/*" "math/*" "utils/*" "verifier/*" "tasograph/*")
 add_executable(test_all ${TEST_ALL} ${SOURCE})
 add_executable(test_bfs ${TEST_BFS} ${SOURCE})
 add_executable(test_generator ${TEST_GENERATOR} ${SOURCE})
 add_executable(test_equiv_set ${TEST_EQUIV_SET} ${SOURCE})
 add_executable(test_optimization ${TEST_OPTIMIZATION} ${SOURCE})
+add_executable(test_optimization_sa ${TEST_OPTIMIZATION_SA} ${SOURCE})
