--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ file(GLOB_RECURSE TEST_EQUIV_SET "test/test_equivalence_set.cpp")
 file(GLOB_RECURSE TEST_OPTIMIZATION "test/test_optimization.cpp")
 file(GLOB_RECURSE TEST_OPTIMIZATION_SA "test/test_optimization_sa.cpp")
 file(GLOB_RECURSE TEST_CONTEXT_SHIFT "test/test_context_shift.cpp")
+file(GLOB_RECURSE TEST_ROTATION_MERGING "test/test_rotation_merging.cpp")
 file(GLOB_RECURSE SOURCE "context/*" "dag/*" "dataset/*" "gate/*" "generator/*" "math/*" "utils/*" "verifier/*" "tasograph/*")
 add_executable(test_all ${TEST_ALL} ${SOURCE})
 add_executable(test_bfs ${TEST_BFS} ${SOURCE})
@@ -19,3 +20,4 @@ add_executable(test_equiv_set ${TEST_EQUIV_SET} ${SOURCE})
 add_executable(test_optimization ${TEST_OPTIMIZATION} ${SOURCE})
 add_executable(test_optimization_sa ${TEST_OPTIMIZATION_SA} ${SOURCE})
 add_executable(test_context_shift ${TEST_CONTEXT_SHIFT} ${SOURCE})
+add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} ${SOURCE})
