--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ file(GLOB_RECURSE TEST_OPTIMIZATION "test/test_optimization.cpp")
 file(GLOB_RECURSE TEST_OPTIMIZATION_SA "test/test_optimization_sa.cpp")
 file(GLOB_RECURSE TEST_CONTEXT_SHIFT "test/test_context_shift.cpp")
 file(GLOB_RECURSE TEST_ROTATION_MERGING "test/test_rotation_merging.cpp")
+file(GLOB_RECURSE TEST_GRAPH_TO_QASM "test/test_graph_to_qasm.cpp")
 file(GLOB_RECURSE SOURCE "context/*" "dag/*" "dataset/*" "gate/*" "generator/*" "math/*" "utils/*" "verifier/*" "tasograph/*")
 add_executable(test_all ${TEST_ALL} ${SOURCE})
 add_executable(test_bfs ${TEST_BFS} ${SOURCE})
@@ -21,3 +22,4 @@ add_executable(test_optimization ${TEST_OPTIMIZATION} ${SOURCE})
 add_executable(test_optimization_sa ${TEST_OPTIMIZATION_SA} ${SOURCE})
 add_executable(test_context_shift ${TEST_CONTEXT_SHIFT} ${SOURCE})
 add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} ${SOURCE})
+add_executable(test_graph_to_qasm ${TEST_GRAPH_TO_QASM} ${SOURCE})
