--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 project(quantum-superoptimization)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_BUILD_TYPE "Debug")
+set(CMAKE_BUILD_TYPE "Release")
 
 file(GLOB_RECURSE TEST_ALL "test/test_all.cpp")
 file(GLOB_RECURSE TEST_BFS "test/test_bfs.cpp")
@@ -15,6 +15,7 @@ file(GLOB_RECURSE TEST_CONTEXT_SHIFT "test/test_context_shift.cpp")
 file(GLOB_RECURSE TEST_ROTATION_MERGING "test/test_rotation_merging.cpp")
 file(GLOB_RECURSE TEST_GRAPH_TO_QASM "test/test_graph_to_qasm.cpp")
 file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test/test_toffoli_flip.cpp")
+file(GLOB_RECURSE TEST_QUARTZ "test/test_quartz.cpp")
 file(GLOB_RECURSE SOURCE "context/*" "dag/*" "dataset/*" "gate/*" "generator/*" "math/*" "utils/*" "verifier/*" "tasograph/*")
 add_executable(test_all ${TEST_ALL} ${SOURCE})
 add_executable(test_bfs ${TEST_BFS} ${SOURCE})
@@ -27,3 +28,4 @@ add_executable(test_context_shift ${TEST_CONTEXT_SHIFT} ${SOURCE})
 add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} ${SOURCE})
 add_executable(test_graph_to_qasm ${TEST_GRAPH_TO_QASM} ${SOURCE})
 add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} ${SOURCE})
+add_executable(test_quartz ${TEST_QUARTZ} ${SOURCE})
