add test_quartz in cmakelist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,4 @@ add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} ${SOURCE})
 add_executable(test_graph_to_qasm ${TEST_GRAPH_TO_QASM} ${SOURCE})
 add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} ${SOURCE})
 add_executable(test_rigetti ${TEST_RIGETTI} ${SOURCE})
+add_executable(test_quartz ${TEST_QUARTZ} ${SOURCE})
