Add test_pruning, and do not restrict DFS to not have unused internal parameters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ file(GLOB_RECURSE TEST_BFS "test/test_bfs.cpp")
 file(GLOB_RECURSE TEST_GENERATOR "test/test_generator.cpp")
 file(GLOB_RECURSE TEST_EQUIV_SET "test/test_equivalence_set.cpp")
 file(GLOB_RECURSE TEST_PHASE_SHIFT "test/test_phase_shift.cpp")
+file(GLOB_RECURSE TEST_PRUNING "test/test_pruning.cpp")
 file(GLOB_RECURSE TEST_OPTIMIZATION "test/test_optimization.cpp")
 file(GLOB_RECURSE TEST_OPTIMIZATION_SA "test/test_optimization_sa.cpp")
 file(GLOB_RECURSE TEST_CONTEXT_SHIFT "test/test_context_shift.cpp")
@@ -23,6 +24,7 @@ add_executable(test_bfs ${TEST_BFS} ${SOURCE})
 add_executable(test_generator ${TEST_GENERATOR} ${SOURCE})
 add_executable(test_equiv_set ${TEST_EQUIV_SET} ${SOURCE})
 add_executable(test_phase_shift ${TEST_PHASE_SHIFT} ${SOURCE})
+add_executable(test_pruning ${TEST_PRUNING} ${SOURCE})
 add_executable(test_optimization ${TEST_OPTIMIZATION} ${SOURCE})
 add_executable(test_optimization_sa ${TEST_OPTIMIZATION_SA} ${SOURCE})
 add_executable(test_context_shift ${TEST_CONTEXT_SHIFT} ${SOURCE})
