Add Arb as a prerequisite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,10 @@ project(quantum-superoptimization)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_BUILD_TYPE "Debug")
 
+set(USE_ARBLIB TRUE)
+
 file(GLOB_RECURSE TEST_ALL "test/test_all.cpp")
+file(GLOB_RECURSE TEST_ARB "test/test_arb.cpp")
 file(GLOB_RECURSE TEST_BFS "test/test_bfs.cpp")
 file(GLOB_RECURSE TEST_CONTEXT_SHIFT "test/test_context_shift.cpp")
 file(GLOB_RECURSE TEST_EQUIV_SET "test/test_equivalence_set.cpp")
@@ -20,6 +23,7 @@ file(GLOB_RECURSE TEST_ROTATION_MERGING "test/test_rotation_merging.cpp")
 file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test/test_toffoli_flip.cpp")
 file(GLOB_RECURSE SOURCE "context/*" "dag/*" "dataset/*" "gate/*" "generator/*" "math/*" "utils/*" "verifier/*" "tasograph/*")
 add_executable(test_all ${TEST_ALL} ${SOURCE})
+add_executable(test_arb ${TEST_ARB} ${SOURCE})
 add_executable(test_bfs ${TEST_BFS} ${SOURCE})
 add_executable(test_context_shift ${TEST_CONTEXT_SHIFT} ${SOURCE})
 add_executable(test_equiv_set ${TEST_EQUIV_SET} ${SOURCE})
@@ -33,3 +37,7 @@ add_executable(test_quartz ${TEST_QUARTZ} ${SOURCE})
 add_executable(test_rigetti ${TEST_RIGETTI} ${SOURCE})
 add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} ${SOURCE})
 add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} ${SOURCE})
+
+if(USE_ARBLIB)
+    target_link_libraries(test_arb flint flint-arb)
+endif()
