--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(quantum-superoptimization)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_BUILD_TYPE "Debug")
 
-set(USE_ARBLIB TRUE)
+set(USE_ARBLIB FALSE)
 
 file(GLOB_RECURSE TEST_ALL "test/test_all.cpp")
 file(GLOB_RECURSE TEST_ARB "test/test_arb.cpp")
@@ -40,4 +40,5 @@ add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} ${SOURCE})
 
 if(USE_ARBLIB)
     target_link_libraries(test_arb flint flint-arb)
+    add_compile_definitions(USE_ARBLIB)
 endif()
