Modified CMakeLists to compile to shared library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,50 +1,56 @@
 cmake_minimum_required(VERSION 3.16)
-project(quantum-superoptimization)
+project(Quartz)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_BUILD_TYPE "Debug")
-
-set(USE_ARBLIB FALSE)
-
-if(USE_ARBLIB)
-    macro (add_executable _name)
-        # invoke built-in add_executable
-        _add_executable(${ARGV})
-        if (TARGET ${_name})
-            target_link_libraries(${_name} flint flint-arb)
-        endif()
-    endmacro()
-    add_compile_definitions(USE_ARBLIB)
+if (EXISTS ${CMAKE_CURRENT_BINARY_DIR}/config.cmake)
+  include (${CMAKE_CURRENT_BINARY_DIR}/config.cmake)
+else()
+  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config.cmake)
+    include(${CMAKE_CURRENT_SOURCE_DIR}/config.cmake)
+  endif()
 endif()
 
-file(GLOB_RECURSE TEST_ALL "test/test_all.cpp")
-file(GLOB_RECURSE TEST_ARB "test/test_arb.cpp")
-file(GLOB_RECURSE TEST_BFS "test/test_bfs.cpp")
-file(GLOB_RECURSE TEST_CONTEXT_SHIFT "test/test_context_shift.cpp")
-file(GLOB_RECURSE TEST_EQUIV_SET "test/test_equivalence_set.cpp")
-file(GLOB_RECURSE TEST_GENERATOR "test/test_generator.cpp")
-file(GLOB_RECURSE TEST_GRAPH_TO_QASM "test/test_graph_to_qasm.cpp")
-file(GLOB_RECURSE TEST_OPTIMIZATION "test/test_optimization.cpp")
-file(GLOB_RECURSE TEST_OPTIMIZATION_SA "test/test_optimization_sa.cpp")
-file(GLOB_RECURSE TEST_PHASE_SHIFT "test/test_phase_shift.cpp")
-file(GLOB_RECURSE TEST_PRUNING "test/test_pruning.cpp")
-file(GLOB_RECURSE TEST_QUARTZ "test/test_quartz.cpp")
-file(GLOB_RECURSE TEST_RIGETTI "test/test_rigetti.cpp")
-file(GLOB_RECURSE TEST_ROTATION_MERGING "test/test_rotation_merging.cpp")
-file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test/test_toffoli_flip.cpp")
-file(GLOB_RECURSE SOURCE "context/*" "dag/*" "dataset/*" "gate/*" "generator/*" "math/*" "utils/*" "verifier/*" "tasograph/*")
-add_executable(test_all ${TEST_ALL} ${SOURCE})
-add_executable(test_arb ${TEST_ARB} ${SOURCE})
-add_executable(test_bfs ${TEST_BFS} ${SOURCE})
-add_executable(test_context_shift ${TEST_CONTEXT_SHIFT} ${SOURCE})
-add_executable(test_equiv_set ${TEST_EQUIV_SET} ${SOURCE})
-add_executable(test_generator ${TEST_GENERATOR} ${SOURCE})
-add_executable(test_graph_to_qasm ${TEST_GRAPH_TO_QASM} ${SOURCE})
-add_executable(test_optimization ${TEST_OPTIMIZATION} ${SOURCE})
-add_executable(test_optimization_sa ${TEST_OPTIMIZATION_SA} ${SOURCE})
-add_executable(test_phase_shift ${TEST_PHASE_SHIFT} ${SOURCE})
-add_executable(test_pruning ${TEST_PRUNING} ${SOURCE})
-add_executable(test_quartz ${TEST_QUARTZ} ${SOURCE})
-add_executable(test_rigetti ${TEST_RIGETTI} ${SOURCE})
-add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} ${SOURCE})
-add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} ${SOURCE})
+include_directories(${CMAKE_INCLUDE_PATH})
+include_directories("include")
+
+#initial variables
+set(QUARTZ_LIBS "")
+set(QUARTZ_LINK_LIBS ${CMAKE_DL_LIBS})
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+file(GLOB_RECURSE QUARTZ_SRCS
+  src/core/*.cpp
+  )
+# list(APPEND TASO_SRCS ${PROTO_CPPS})
+
+#Generic compilation options
+include(CheckCXXCompilerFlag)
+check_cxx_compiler_flag("-std=c++17" SUPPORT_CXX17)
+if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
+  message("Build in Debug mode")
+#   set(CMAKE_CUDA_FLAGS "-O0 -g -Xcompiler=-fPIC ${CMAKE_CUDA_FLAGS}")
+  set(CMAKE_CXX_FLAGS "-O0 -g -Wall -fPIC ${CMAKE_CXX_FLAGS}")
+else()
+#   set(CMAKE_CUDA_FLAGS "-O2 -Xcompiler=-fPIC ${CMAKE_CUDA_FLAGS}")
+  set(CMAKE_CXX_FLAGS "-O2 -Wall -fPIC ${CMAKE_CXX_FLAGS}")
+endif()
+
+add_library(quartz_runtime SHARED ${QUARTZ_SRCS})
+
+# set_target_properties(quartz_runtime
+#   PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+
+target_compile_features(quartz_runtime PUBLIC cxx_std_17)
+
+target_link_libraries(quartz_runtime ${QUARTZ_LINK_LIBS})
+
+target_include_directories(quartz_runtime
+  PUBLIC ${PROJECT_SOURCE_DIR}/include)
+
+# set_target_properties(quartz_runtime
+#                       PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+#install library
+install(TARGETS quartz_runtime
+    LIBRARY DESTINATION lib)
+
+install (DIRECTORY ${PROJECT_SOURCE_DIR}/include
+    DESTINATION .)
