[generator] Change the hash function and make Arb work (not enabling Arb) (#1)
* Use Arb for random number generation and require Arb version >= 2.20.0

* Debugging hash collision

* Fix zero hash value

* Avoid overloading std::abs

* Also use the new hash function when kFingerprintInvariantUnderPhaseShift is false

* Fix a bug in Dataset::remove_singletons() that might falsely remove some DAGs

* Temporarily disable Arb

* Restore test_pruning.h

* Restore verifier.py

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ if(USE_ARBLIB)
         # invoke built-in add_executable
         _add_executable(${ARGV})
         if (TARGET ${_name})
-            target_link_libraries(${_name} flint flint-arb)
+            target_link_libraries(${_name} flint flint-arb gmp)
         endif()
     endmacro()
     add_compile_definitions(USE_ARBLIB)
