--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,6 +17,9 @@ if(USE_ARBLIB)
     add_compile_definitions(USE_ARBLIB)
 endif()
 
+include_directories(${CMAKE_INCLUDE_PATH})
+include_directories("../include")
+
 file(GLOB_RECURSE TEST_ALL "test_all.cpp")
 file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 file(GLOB_RECURSE TEST_BFS "test_bfs.cpp")
@@ -32,22 +35,39 @@ file(GLOB_RECURSE TEST_QUARTZ "test_quartz.cpp")
 file(GLOB_RECURSE TEST_RIGETTI "test_rigetti.cpp")
 file(GLOB_RECURSE TEST_ROTATION_MERGING "test_rotation_merging.cpp")
 file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test_toffoli_flip.cpp")
-file(GLOB_RECURSE SOURCE "src/core/*.cpp")
-add_executable(test_all ${TEST_ALL} ${SOURCE})
-add_executable(test_arb ${TEST_ARB} ${SOURCE})
-add_executable(test_bfs ${TEST_BFS} ${SOURCE})
-add_executable(test_context_shift ${TEST_CONTEXT_SHIFT} ${SOURCE})
-add_executable(test_equiv_set ${TEST_EQUIV_SET} ${SOURCE})
-add_executable(test_generator ${TEST_GENERATOR} ${SOURCE})
-add_executable(test_graph_to_qasm ${TEST_GRAPH_TO_QASM} ${SOURCE})
-add_executable(test_optimization ${TEST_OPTIMIZATION} ${SOURCE})
-add_executable(test_optimization_sa ${TEST_OPTIMIZATION_SA} ${SOURCE})
-add_executable(test_phase_shift ${TEST_PHASE_SHIFT} ${SOURCE})
-add_executable(test_pruning ${TEST_PRUNING} ${SOURCE})
-add_executable(test_quartz ${TEST_QUARTZ} ${SOURCE})
-add_executable(test_rigetti ${TEST_RIGETTI} ${SOURCE})
-add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} ${SOURCE})
-add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} ${SOURCE})
 
-add_library(libquartz_runtime SHARED IMPORTED)
- set_property(TARGET libquartz_runtime PROPERTY IMPORTED_LOCATION "/usr/local/lib/libquartz_runtime.so")
+# add_library(libquartz_runtime SHARED IMPORTED)
+# set_property(TARGET libquartz_runtime PROPERTY IMPORTED_LOCATION "../libquartz_runtime.so")
+
+add_executable(test_all ${TEST_ALL} )
+add_executable(test_arb ${TEST_ARB} )
+add_executable(test_bfs ${TEST_BFS} )
+add_executable(test_context_shift ${TEST_CONTEXT_SHIFT} )
+add_executable(test_equiv_set ${TEST_EQUIV_SET} )
+add_executable(test_generator ${TEST_GENERATOR} )
+add_executable(test_graph_to_qasm ${TEST_GRAPH_TO_QASM} )
+add_executable(test_optimization ${TEST_OPTIMIZATION} )
+add_executable(test_optimization_sa ${TEST_OPTIMIZATION_SA} )
+add_executable(test_phase_shift ${TEST_PHASE_SHIFT} )
+add_executable(test_pruning ${TEST_PRUNING} )
+add_executable(test_quartz ${TEST_QUARTZ} )
+add_executable(test_rigetti ${TEST_RIGETTI} )
+add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} )
+add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} )
+
+link_directories("../")
+target_link_libraries(test_all quartz_runtime)
+target_link_libraries(test_arb quartz_runtime )
+target_link_libraries(test_bfs quartz_runtime )
+target_link_libraries(test_context_shift quartz_runtime )
+target_link_libraries(test_equiv_set quartz_runtime )
+target_link_libraries(test_generator quartz_runtime )
+target_link_libraries(test_graph_to_qasm quartz_runtime )
+target_link_libraries(test_optimization quartz_runtime )
+target_link_libraries(test_optimization_sa quartz_runtime )
+target_link_libraries(test_phase_shift quartz_runtime )
+target_link_libraries(test_pruning quartz_runtime )
+target_link_libraries(test_quartz quartz_runtime )
+target_link_libraries(test_rigetti quartz_runtime )
+target_link_libraries(test_rotation_merging quartz_runtime )
+target_link_libraries(test_toffoli_flip quartz_runtime )
