--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,14 +11,24 @@ if(USE_ARBLIB)
         # invoke built-in add_executable
         _add_executable(${ARGV})
         if (TARGET ${_name})
-            target_link_libraries(${_name} flint flint-arb gmp)
+            target_link_libraries(${_name} flint flint-arb gmp quartz_runtime)
         endif()
     endmacro()
     add_compile_definitions(USE_ARBLIB)
+else()
+    macro (add_executable _name)
+        # invoke built-in add_executable
+        _add_executable(${ARGV})
+        if (TARGET ${_name})
+            target_link_libraries(${_name} quartz_runtime)
+        endif()
+    endmacro()
 endif()
 
 include_directories(${CMAKE_INCLUDE_PATH})
 include_directories("../include")
+
+link_directories("../")
 
 file(GLOB_RECURSE TEST_ALL "test_all.cpp")
 file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
@@ -34,6 +44,7 @@ file(GLOB_RECURSE TEST_PRUNING "test_pruning.cpp")
 file(GLOB_RECURSE TEST_QUARTZ "test_quartz.cpp")
 file(GLOB_RECURSE TEST_RIGETTI "test_rigetti.cpp")
 file(GLOB_RECURSE TEST_ROTATION_MERGING "test_rotation_merging.cpp")
+file(GLOB_RECURSE TEST_SPARSITY "test_sparsity.cpp")
 file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test_toffoli_flip.cpp")
 
 # add_library(libquartz_runtime SHARED IMPORTED)
@@ -52,22 +63,6 @@ add_executable(test_phase_shift ${TEST_PHASE_SHIFT} )
 add_executable(test_pruning ${TEST_PRUNING} )
 add_executable(test_quartz ${TEST_QUARTZ} )
 add_executable(test_rigetti ${TEST_RIGETTI} )
+add_executable(test_sparsity ${TEST_SPARSITY} )
 add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} )
 add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} )
-
-link_directories("../")
-target_link_libraries(test_all quartz_runtime)
-target_link_libraries(test_arb quartz_runtime )
-target_link_libraries(test_bfs quartz_runtime )
-target_link_libraries(test_context_shift quartz_runtime )
-target_link_libraries(test_equiv_set quartz_runtime )
-target_link_libraries(test_generator quartz_runtime )
-target_link_libraries(test_graph_to_qasm quartz_runtime )
-target_link_libraries(test_optimization quartz_runtime )
-target_link_libraries(test_optimization_sa quartz_runtime )
-target_link_libraries(test_phase_shift quartz_runtime )
-target_link_libraries(test_pruning quartz_runtime )
-target_link_libraries(test_quartz quartz_runtime )
-target_link_libraries(test_rigetti quartz_runtime )
-target_link_libraries(test_rotation_merging quartz_runtime )
-target_link_libraries(test_toffoli_flip quartz_runtime )
