Only enable the target test_arb when USE_ARBLIB is true

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,7 +31,6 @@ include_directories("../include")
 link_directories("../")
 
 file(GLOB_RECURSE TEST_ALL "test_all.cpp")
-file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 file(GLOB_RECURSE TEST_BFS "test_bfs.cpp")
 file(GLOB_RECURSE TEST_CONTEXT_SHIFT "test_context_shift.cpp")
 file(GLOB_RECURSE TEST_EQUIV_SET "test_equivalence_set.cpp")
@@ -46,12 +45,14 @@ file(GLOB_RECURSE TEST_RIGETTI "test_rigetti.cpp")
 file(GLOB_RECURSE TEST_ROTATION_MERGING "test_rotation_merging.cpp")
 file(GLOB_RECURSE TEST_SPARSITY "test_sparsity.cpp")
 file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test_toffoli_flip.cpp")
+if(USE_ARBLIB)
+    file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
+endif()
 
 # add_library(libquartz_runtime SHARED IMPORTED)
 # set_property(TARGET libquartz_runtime PROPERTY IMPORTED_LOCATION "../libquartz_runtime.so")
 
 add_executable(test_all ${TEST_ALL} )
-add_executable(test_arb ${TEST_ARB} )
 add_executable(test_bfs ${TEST_BFS} )
 add_executable(test_context_shift ${TEST_CONTEXT_SHIFT} )
 add_executable(test_equiv_set ${TEST_EQUIV_SET} )
@@ -66,3 +67,6 @@ add_executable(test_rigetti ${TEST_RIGETTI} )
 add_executable(test_sparsity ${TEST_SPARSITY} )
 add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} )
 add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} )
+if(USE_ARBLIB)
+    add_executable(test_arb ${TEST_ARB} )
+endif()
