Fix the include path and a formula in DAG::generate_hash_values()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ target_compile_features(quartz_runtime PUBLIC cxx_std_17)
 target_link_libraries(quartz_runtime ${QUARTZ_LINK_LIBS})
 
 target_include_directories(quartz_runtime
-  PUBLIC ${PROJECT_SOURCE_DIR}/include)
+  PUBLIC ${PROJECT_SOURCE_DIR}/src)
 
 #install library
 install(TARGETS quartz_runtime
