--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -45,6 +45,7 @@ file(GLOB_RECURSE TEST_RIGETTI "test_rigetti.cpp")
 file(GLOB_RECURSE TEST_ROTATION_MERGING "test_rotation_merging.cpp")
 file(GLOB_RECURSE TEST_SPARSITY "test_sparsity.cpp")
 file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test_toffoli_flip.cpp")
+file(GLOB_RECURSE TEST_APPLY_XFER "test_apply_xfer.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -67,6 +68,7 @@ add_executable(test_rigetti ${TEST_RIGETTI} )
 add_executable(test_sparsity ${TEST_SPARSITY} )
 add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} )
 add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} )
+add_executable(test_apply_xfer ${TEST_APPLY_XFER} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
