--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ target_compile_features(quartz_runtime PUBLIC cxx_std_17)
 target_link_libraries(quartz_runtime ${QUARTZ_LINK_LIBS})
 
 target_include_directories(quartz_runtime
-  PUBLIC ${PROJECT_SOURCE_DIR}/src/quartz)
+  PUBLIC ${PROJECT_SOURCE_DIR}/src)
 
 #install library
 install(TARGETS quartz_runtime
