--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,4 +82,4 @@ install (DIRECTORY ${PROJECT_SOURCE_DIR}/src/quartz/
     DESTINATION include/quartz
     FILES_MATCHING PATTERN "*.h")
 
-add_subdirectory(test)
+add_subdirectory(src/test)
