--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -70,7 +70,7 @@ add_executable(test_sparsity ${TEST_SPARSITY} )
 add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} )
 add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} )
 add_executable(test_apply_xfer ${TEST_APPLY_XFER} )
-add_executable(test_device ${TEST_DEVICE}$)
+add_executable(test_device ${TEST_DEVICE})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
