Added scripts to run the experiments, and add corresponding test files, modified CMakelist.txt to add these tests

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -46,6 +46,8 @@ file(GLOB_RECURSE TEST_ROTATION_MERGING "test_rotation_merging.cpp")
 file(GLOB_RECURSE TEST_SPARSITY "test_sparsity.cpp")
 file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test_toffoli_flip.cpp")
 file(GLOB_RECURSE TEST_APPLY_XFER "test_apply_xfer.cpp")
+file(GLOB_RECURSE TEST_IBMQ "test_ibmq.cpp")
+file(GLOB_RECURSE TEST_NAM "test_nam.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -69,6 +71,8 @@ add_executable(test_sparsity ${TEST_SPARSITY} )
 add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} )
 add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} )
 add_executable(test_apply_xfer ${TEST_APPLY_XFER} )
+add_executable(test_ibmq ${TEST_IBMQ} )
+add_executable(test_nam ${TEST_NAM} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
