--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -48,6 +48,9 @@ file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test_toffoli_flip.cpp")
 file(GLOB_RECURSE TEST_APPLY_XFER "test_apply_xfer.cpp")
 file(GLOB_RECURSE TEST_IBMQ "test_ibmq.cpp")
 file(GLOB_RECURSE TEST_NAM "test_nam.cpp")
+file(GLOB_RECURSE TEST_IBMQ_TD_DISABLED "test_ibmq_td_disabled.cpp")
+file(GLOB_RECURSE TEST_NAM_TD_DISABLED "test_nam_td_disabled.cpp")
+file(GLOB_RECURSE TEST_RIGETTI_TD_DISABLED "test_rigetti_td_disabled.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -73,6 +76,9 @@ add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} )
 add_executable(test_apply_xfer ${TEST_APPLY_XFER} )
 add_executable(test_ibmq ${TEST_IBMQ} )
 add_executable(test_nam ${TEST_NAM} )
+add_executable(test_ibmq_td_disabled ${TEST_IBMQ_TD_DISABLED} )
+add_executable(test_nam_td_disabled ${TEST_NAM_TD_DISABLED} )
+add_executable(test_rigetti_td_disabled ${TEST_RIGETTI_TD_DISABLED} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
