ignore DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ python/quartz/__pycache__/
 src/python/utils/__pycache__/
 src/python/verifier/__pycache__/
 install_manifest.txt
+
+# OS
+.DS_Store
