--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -44,6 +44,7 @@ file(GLOB_RECURSE TEST_NAM "test_nam.cpp")
 file(GLOB_RECURSE TEST_IBMQ_TD_DISABLED "test_ibmq_td_disabled.cpp")
 file(GLOB_RECURSE TEST_NAM_TD_DISABLED "test_nam_td_disabled.cpp")
 file(GLOB_RECURSE TEST_RIGETTI_TD_DISABLED "test_rigetti_td_disabled.cpp")
+file(GLOB_RECURSE TEST_VERIFIER "test_verifier.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -73,6 +74,7 @@ add_executable(test_nam ${TEST_NAM} )
 add_executable(test_ibmq_td_disabled ${TEST_IBMQ_TD_DISABLED} )
 add_executable(test_nam_td_disabled ${TEST_NAM_TD_DISABLED} )
 add_executable(test_rigetti_td_disabled ${TEST_RIGETTI_TD_DISABLED} )
+add_executable(test_verifier ${TEST_VERIFIER} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
