Added build/* in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ python/quartz/__pycache__/
 src/python/utils/__pycache__/
 src/python/verifier/__pycache__/
 install_manifest.txt
+
+# Build
+build/*
