--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -45,6 +45,7 @@ file(GLOB_RECURSE TEST_IBMQ_TD_DISABLED "test_ibmq_td_disabled.cpp")
 file(GLOB_RECURSE TEST_NAM_TD_DISABLED "test_nam_td_disabled.cpp")
 file(GLOB_RECURSE TEST_RIGETTI_TD_DISABLED "test_rigetti_td_disabled.cpp")
 file(GLOB_RECURSE TEST_DEVICE "test_device.cpp")
+file(GLOB_RECURSE TEST_INIT_PHYSICAL_MAPPING "test_init_qubit_mapping.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -75,6 +76,7 @@ add_executable(test_ibmq_td_disabled ${TEST_IBMQ_TD_DISABLED} )
 add_executable(test_nam_td_disabled ${TEST_NAM_TD_DISABLED} )
 add_executable(test_rigetti_td_disabled ${TEST_RIGETTI_TD_DISABLED} )
 add_executable(test_device ${TEST_DEVICE})
+add_executable(test_init_qubit_mapping ${TEST_INIT_PHYSICAL_MAPPING})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
