--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -47,6 +47,7 @@ file(GLOB_RECURSE TEST_RIGETTI_TD_DISABLED "test_rigetti_td_disabled.cpp")
 file(GLOB_RECURSE TEST_DEVICE "test_device.cpp")
 file(GLOB_RECURSE TEST_INIT_PHYSICAL_MAPPING "test_init_qubit_mapping.cpp")
 file(GLOB_RECURSE TEST_MAPPING_CORRECTNESS "test_mapping_correctness.cpp")
+file(GLOB_RECURSE TEST_IMPLEMENTATION_COST "test_implementation_cost.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -79,6 +80,7 @@ add_executable(test_rigetti_td_disabled ${TEST_RIGETTI_TD_DISABLED} )
 add_executable(test_device ${TEST_DEVICE})
 add_executable(test_init_qubit_mapping ${TEST_INIT_PHYSICAL_MAPPING})
 add_executable(test_mapping_correctness ${TEST_MAPPING_CORRECTNESS})
+add_executable(test_implementation_cost ${TEST_IMPLEMENTATION_COST})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
