--- a/experiment/pretrain/config/config.yaml
+++ b/experiment/pretrain/config/config.yaml
@@ -10,8 +10,15 @@ seed: 98765
 wandb:
   en: True
   offline: False
+  entity: quartz
 
 gate_set: ['h', 'cx', 't', 'tdg']
 ecc_file: 'bfs_verified_simplified.json'
 no_increase: True
-include_nop: False
+include_nop: True
+
+dataset_dir: dataset
+graph_file: graph.json
+reward_file: reward.json
+
+gamma: 0.99
