--- a/experiment/ppo/pretrain/config/config.yaml
+++ b/experiment/ppo/pretrain/config/config.yaml
@@ -4,7 +4,7 @@ resume: False
 
 ckpt_path: ''
 
-gpus: [1]
+gpus: [3]
 seed: 98765
 
 wandb:
@@ -13,7 +13,7 @@ wandb:
   entity: quartz
 
 gate_set: ['h', 'cx', 't', 'tdg']
-ecc_file: 'bfs_verified_simplified.json'
+ecc_file: '../../../bfs_verified_simplified.json'
 no_increase: True
 include_nop: True
 
