Added more files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ experiment/pretrain/outputs
 experiment/ppo/PPO_logs
 experiment/ppo/PPO_preTrained
 experiment/ppo/pretrain/dataset
+experiment/ppo/pretrain/outputs
 experiment/ppo/pretrain/pretrain_dataset_g9
 experiment/ppo/pretrain/pretrain_dataset_g99
 
