--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -48,6 +48,7 @@ file(GLOB_RECURSE TEST_DEVICE "test_device.cpp")
 file(GLOB_RECURSE TEST_INIT_PHYSICAL_MAPPING "test_init_qubit_mapping.cpp")
 file(GLOB_RECURSE TEST_MAPPING_CORRECTNESS "test_mapping_correctness.cpp")
 file(GLOB_RECURSE TEST_IMPLEMENTATION_COST "test_implementation_cost.cpp")
+file(GLOB_RECURSE TEST_ADD_SWAP "test_add_swap.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -81,6 +82,7 @@ add_executable(test_device ${TEST_DEVICE})
 add_executable(test_init_qubit_mapping ${TEST_INIT_PHYSICAL_MAPPING})
 add_executable(test_mapping_correctness ${TEST_MAPPING_CORRECTNESS})
 add_executable(test_implementation_cost ${TEST_IMPLEMENTATION_COST})
+add_executable(test_add_swap ${TEST_ADD_SWAP})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
