--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -49,6 +49,7 @@ file(GLOB_RECURSE TEST_INIT_PHYSICAL_MAPPING "test_init_qubit_mapping.cpp")
 file(GLOB_RECURSE TEST_MAPPING_CORRECTNESS "test_mapping_correctness.cpp")
 file(GLOB_RECURSE TEST_IMPLEMENTATION_COST "test_implementation_cost.cpp")
 file(GLOB_RECURSE TEST_ADD_SWAP "test_add_swap.cpp")
+file(GLOB_RECURSE TEST_SABRE "test_sabre.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -83,6 +84,7 @@ add_executable(test_init_qubit_mapping ${TEST_INIT_PHYSICAL_MAPPING})
 add_executable(test_mapping_correctness ${TEST_MAPPING_CORRECTNESS})
 add_executable(test_implementation_cost ${TEST_IMPLEMENTATION_COST})
 add_executable(test_add_swap ${TEST_ADD_SWAP})
+add_executable(test_sabre ${TEST_SABRE})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
