--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ build/*
 experiment/pretrain/dataset
 experiment/pretrain/pretrain_dataset*
 experiment/pretrain/outputs
+experiment/dqn/outputs/
 
 experiment/ppo/PPO_logs
 # experiment/ppo/PPO_preTrained
