--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -50,6 +50,7 @@ file(GLOB_RECURSE TEST_MAPPING_CORRECTNESS "test_mapping_correctness.cpp")
 file(GLOB_RECURSE TEST_IMPLEMENTATION_COST "test_implementation_cost.cpp")
 file(GLOB_RECURSE TEST_ADD_SWAP "test_add_swap.cpp")
 file(GLOB_RECURSE TEST_SABRE "test_sabre.cpp")
+file(GLOB_RECURSE TEST_APPLY_MAPPING "test_apply_mapping.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -85,6 +86,7 @@ add_executable(test_mapping_correctness ${TEST_MAPPING_CORRECTNESS})
 add_executable(test_implementation_cost ${TEST_IMPLEMENTATION_COST})
 add_executable(test_add_swap ${TEST_ADD_SWAP})
 add_executable(test_sabre ${TEST_SABRE})
+add_executable(test_apply_mapping ${TEST_APPLY_MAPPING})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
