--- a/experiment/dqn/config/config.yaml
+++ b/experiment/dqn/config/config.yaml
@@ -2,42 +2,42 @@ mode: train
 resume: False
 ckpt_path: outputs/2022-05-10/13-29-42/last.ckpt
 
-load_pretrained: True
+test_topk: 3
+load_pretrained: False
 # pretrained_weight: '../pretrain/outputs/2022-05-12/04-12-25/epoch=479-val_loss=0.00-best.ckpt'
 pretrained_weight: '../pretrain/outputs/2022-05-11/06-32-51/epoch=103-val_loss=0.07-best.ckpt'
 weight: ''
 
 gpus: [0]
-
 seed: 98765
-
 wandb:
   en: True
   offline: False
   entity: quartz
 
+# DQNMod
 init_graph_path: '../barenco_tof_3_opt_path/subst_history_39.qasm'
 
 gate_set: ['h', 'cx', 't', 'tdg']
 ecc_file: 'bfs_verified_simplified.json'
 no_increase: True
 include_nop: False
+nop_policy: ['s', 0.0]
+gamma: 0.9
+episode_length: 60
 
 batch_size: 256
-gamma: 0.9
+scheduler: 'reduce'
 target_update_interval: 100
 replaybuf_size: 102400
 init_state_buf_size: 1024
-nop_policy: ['s', 0.0]
-sample_init: False
-restart_from_best: False
-game_over_when_better: False
-strict_better: True
-restore_weight_after_better: False
-clear_buf_after_better: False
+prioritized_buffer: True
+prio_alpha: 0.2
+prio_init_beta: 0.6
+
 agent_episode: True
+strict_better: True
+restart_from_best: False
 
 qgnn_h_feats: 64
 qgnn_inter_dim: 64
-episode_length: 30
-test_topk: 3
