--- a/experiment/dqn/config/config.yaml
+++ b/experiment/dqn/config/config.yaml
@@ -29,11 +29,13 @@ episode_length: 60
 batch_size: 1024
 scheduler: 'reduce'
 target_update_interval: 100
+agent_play_interval: 1
 replaybuf_size: 102400
 init_state_buf_size: 1024
 prioritized_buffer: True
 prio_alpha: 0.2
 prio_init_beta: 0.6
+double_dqn: False
 
 agent_episode: True
 strict_better: True
