--- a/experiment/dqn/config/config.yaml
+++ b/experiment/dqn/config/config.yaml
@@ -25,6 +25,7 @@ include_nop: False
 nop_policy: ['s', 0.0]
 gamma: 0.9
 episode_length: 60
+max_additional_gates: 10
 
 lr: 1e-3
 batch_size: 1024
@@ -32,7 +33,6 @@ scheduler: 'reduce'
 target_update_interval: 100
 agent_play_interval: 1
 replaybuf_size: 102400
-init_state_buf_size: 1024
 prioritized_buffer: False
 prio_alpha: 0.2
 prio_init_beta: 0.6
@@ -41,6 +41,8 @@ double_dqn: False
 agent_episode: True
 strict_better: True
 restart_from_best: False
+sample_init: False
+init_state_buf_size: 512
 
 qgnn_h_feats: 64
 qgnn_inter_dim: 64
