--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(Quartz)
 SET(CMAKE_BUILD_TYPE "Debug")
 
 if (EXISTS ${CMAKE_CURRENT_BINARY_DIR}/config.cmake)
-  include (${CMAKE_CURRENT_BINARY_DIR}/config.cmake)
+    include (${CMAKE_CURRENT_BINARY_DIR}/config.cmake)
 else()
-  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config.cmake)
-    include(${CMAKE_CURRENT_SOURCE_DIR}/config.cmake)
-  endif()
+    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config.cmake)
+        include(${CMAKE_CURRENT_SOURCE_DIR}/config.cmake)
+    endif()
 endif()
 
 # Put the binary files in the same folder as dll files
@@ -36,8 +36,8 @@ set(QUARTZ_LINK_LIBS ${CMAKE_DL_LIBS})
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 file(GLOB_RECURSE QUARTZ_SRCS
-  src/quartz/*.cpp
-  )
+        src/quartz/*.cpp
+        )
 
 #Generic compilation options
 include(CheckCXXCompilerFlag)
@@ -72,25 +72,37 @@ target_compile_features(quartz_runtime PUBLIC cxx_std_17)
 target_link_libraries(quartz_runtime ${QUARTZ_LINK_LIBS})
 
 target_include_directories(quartz_runtime
-  PUBLIC ${PROJECT_SOURCE_DIR}/src)
+        PUBLIC ${PROJECT_SOURCE_DIR}/src)
 
 execute_process(COMMAND cat /proc/version RESULT_VARIABLE NOT_LINUX)
 if (NOT_LINUX)
-    message("build on macOS, link openmp lib")
+    message("build on macOS, link openmp lib with compiler clang")
     include_directories(/usr/local/include)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xclang -fopenmp")
     find_library(OPENMP_LIB libomp.dylib /usr/local/lib)
     target_link_libraries(quartz_runtime LINK_PUBLIC ${OPENMP_LIB})
 else()
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+    message("build on Linux")
+    if (DEFINED ENV{CC} AND DEFINED ENV{CXX})
+        if ($ENV{CC} MATCHES "icc" AND $ENV{CXX} MATCHES "icc")
+            message("build with Intel Compiler icc")
+            SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopenmp")
+        else()
+            message("build with default compiler")
+            SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+        endif()
+    else()
+        message("build with default compiler")
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+    endif()
 endif()
 
 #install library
 install(TARGETS quartz_runtime
-    LIBRARY DESTINATION lib)
+        LIBRARY DESTINATION lib)
 
 install (DIRECTORY ${PROJECT_SOURCE_DIR}/src/quartz/
-    DESTINATION include/quartz
-    FILES_MATCHING PATTERN "*.h")
+        DESTINATION include/quartz
+        FILES_MATCHING PATTERN "*.h")
 
 add_subdirectory(src/test)
