--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -51,6 +51,7 @@ file(GLOB_RECURSE TEST_IMPLEMENTATION_COST "test_implementation_cost.cpp")
 file(GLOB_RECURSE TEST_ADD_SWAP "test_add_swap.cpp")
 file(GLOB_RECURSE TEST_SABRE "test_sabre.cpp")
 file(GLOB_RECURSE TEST_APPLY_MAPPING "test_apply_mapping.cpp")
+file(GLOB_RECURSE TEST_SABRE_FULL "test_sabre_full.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -87,6 +88,7 @@ add_executable(test_implementation_cost ${TEST_IMPLEMENTATION_COST})
 add_executable(test_add_swap ${TEST_ADD_SWAP})
 add_executable(test_sabre ${TEST_SABRE})
 add_executable(test_apply_mapping ${TEST_APPLY_MAPPING})
+add_executable(test_sabre_full ${TEST_SABRE_FULL})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
